--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="#"><img src="./images/netlfix_logo.svg" alt="logo"></a>
+        <a href="#"><img src="./netlfix_logo.svg" alt="logo"></a>
     </nav>
     <div class="form-wrapper">
         <h2>Sign In</h2>
